--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
     <section class="product">
       <div class="pr_cards">
-        <div class="card__1"></div>
+        <div class="card__1">coca cola</div>
         <div class="card__2"></div>
         <div class="card__3"></div>
         <div class="card__4"></div>
