--- a/index.html
+++ b/index.html
@@ -99,15 +99,77 @@
       </div>
     </section>
 
-    <section class="product">
-      <div class="pr_cards">
-        <div class="card__1">coca cola</div>
-        <div class="card__2"></div>
-        <div class="card__3"></div>
-        <div class="card__4"></div>
+    <!-- footer-->
+    <footer>
+      <div class="footer-container">
+        <div class="footer-section logo-section">
+          <img src="./img/icons/logo.png" alt="Fast Food Logo" class="logo" />
+          <p class="contact-info">
+            <a href="#">
+              <img src="./img/icons/global.svg" alt="global" />
+              www.fastfood_usa.com</a
+            >
+            <a href="#">
+              <img src="./img/icons/mail.svg" alt="mail" />
+              fastfood_usa@gmail.com</a
+            >
+          </p>
+        </div>
+        <div class="footer-section">
+          <h3>Our menu</h3>
+          <ul>
+            <li>Breakfast</li>
+            <li>Lunch</li>
+            <li>Dinner</li>
+          </ul>
+        </div>
+        <div class="footer-section">
+          <h3>Information</h3>
+          <ul>
+            <li>About us</li>
+            <li>Testimonial</li>
+            <li>Event</li>
+          </ul>
+        </div>
+        <div class="footer-section">
+          <h3>Useful Links</h3>
+          <ul>
+            <li>Services</li>
+            <li>Support</li>
+            <li>Conditions</li>
+          </ul>
+        </div>
+        <div class="footer-section social-section">
+          <h3>Social Handles</h3>
+          <div class="social-icons">
+            <a href="#"
+              ><img src="./img/icons/socials/facebook.png" alt="Facebook"
+            /></a>
+            <a href="#"
+              ><img src="./img/icons/socials/twitter.png" alt="Twitter"
+            /></a>
+            <a href="#"
+              ><img src="./img/icons/socials/instagram.png" alt="Instagram"
+            /></a>
+            <a href="#"
+              ><img src="./img/icons/socials/linkedin.png" alt="LinkedIn"
+            /></a>
+          </div>
+        </div>
       </div>
-    </section>
+    </footer>
     <!--
+
+
+Useful Links
+Services
+Support
+Conditions
+
+Social Handles
+
+fastfood_usa@gmail.com
+ www.fastfood_usa.com
 
     -->
   </body>
